--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "firebase": "^9.10.0",
     "moment": "^2.29.4",
     "notiflix": "^3.2.5",
     "react": "^18.2.0",
