--- a/ui/package.json
+++ b/ui/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.1",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^5.48.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -59,6 +60,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-query-params": "^2.2.1",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
